# CHIP-8

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  test_rom.ch8
examples/: config-gaming.toml  config-retro.toml  example-config.toml
src/: error.rs  lib.rs  main.rs  test_utils.rs
src/audio/: buzzer.rs  mod.rs  stream.rs
src/emulator/: cpu.rs  memory.rs  mod.rs  registers.rs  stack.rs  timers.rs
src/frontend/: cli.rs  config.rs  gui.rs  mod.rs
src/graphics/: mod.rs  renderer.rs
src/hardware/: audio.rs  display.rs  input.rs  mod.rs
src/input/: keyboard.rs  mapper.rs  mod.rs
tests/: integration_tests.rs
